--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -8,14 +8,18 @@ permissions:
 
 jobs:
   autofix:
+    name: autofix
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v4.1.7
         with:
-          node-version: 16
-
-      - run: npm ci
-      - run: npx prettier --write .
-
-      - uses: autofix-ci/action@dd55f44df8f7cdb7a6bf74c78677eb8acd40cd0a
+          fetch-depth: 0
+      - name: Setup Tools
+        uses: ./.github/setup
+      - name: Fix formatting
+        run: pnpx nx affected:lint --fix
+      - name: Apply fixes
+        uses: autofix-ci/action@dd55f44df8f7cdb7a6bf74c78677eb8acd40cd0a
+        with:
+          commit-message: 'ci: apply automated fixes'
